# xue_hua_video_player

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  README.zh-CN.md  ffigen.yaml  pubspec.yaml
.github/workflows/: precompile_binaries.yml
.scratch/gstreamer-platform-texture/: PRD.md
android/: .gitignore  CMakeLists.txt  build.gradle  build.gradle.kts  proguard-rules.pro  settings.gradle  settings.gradle.kts
android/gstreamer_build/: .gitignore
android/gstreamer_build/jni/: Android.mk  Application.mk  dummy.c
android/gstreamer_build/patches/: reqwest-android-current-thread.patch
android/scripts/: build_gstreamer_umbrella.sh  build_reqwest_plugin_android.sh  ensure_gstreamer_android.sh  gstreamer_paths.sh
android/src/main/: AndroidManifest.xml
android/src/main/java/com/flutter_rust_bridge/xue_hua_video_player/: AndroidSurfaceBridge.java  FlutterAssetHelper.java  GStreamerInitProvider.java  IrondashSurfaceProducerCallback.java  NativeAndroidContext.java  NativeRuntimeWarmup.java  XueHuaVideoPlatformView.java  XueHuaVideoPlayerPlugin.java  XueHuaVideoTexture.java  XueHuaVideoViewFactory.java
android/src/main/java/xue_hua/video_player/: AndroidSurfaceBridge.java  FlutterAssetHelper.java  GStreamerInitProvider.java  NativeAndroidContext.java  NativeRuntimeWarmup.java  XueHuaVideoPlayerPlugin.java  XueHuaVideoTexture.java
android/src/test/java/com/flutter_rust_bridge/xue_hua_video_player/: XueHuaVideoTextureTest.java
android/src/test/java/xue_hua/video_player/: XueHuaVideoTextureTest.java
cargokit/: .gitignore
cargokit/build_tool/: pubspec.yaml
cargokit/gradle/: plugin.gradle
docs/: regression-matrix-1.4.0.md
docs/adr/: 0001-pipeline-shell-dual-adapter.md
docs/agents/: domain.md  issue-tracker.md
example/: .gitignore  README.md  pubspec.yaml
example/android/: .gitignore  build.gradle.kts
example/integration_test/: simple_test.dart
example/lib/: main.dart  thumbnail_page.dart
example/linux/: CMakeLists.txt
example/macos/: Podfile
example/windows/: CMakeLists.txt
ios/: xue_hua_video_player.podspec
ios/Classes/: XueHuaMainThreadShim.m  XueHuaVideoPlayerPlugin.swift  XueHuaVideoTexture.swift
ios/scripts/: ios_rust_link_flags.sh
ios/xue_hua_video_player/: Package.swift
lib/: xue_hua_video_player.dart
lib/src/: platform_view.dart  player_controller.dart  video_source.dart  video_view.dart  xue_hua_player_controller.dart  xue_hua_video_player.dart  xue_hua_video_view.dart
linux/: CMakeLists.txt  xue_hua_video_player_plugin.cc  xue_hua_video_texture.cc  xue_hua_video_texture.h
linux/include/xue_hua_video_player/: xue_hua_video_player_plugin.h
macos/: gstreamer_playback_plugins.txt  gstreamer_podfile_helper.rb  xue_hua_video_player.podspec
macos/Classes/: XueHuaVideoPlayerPlugin.swift  XueHuaVideoTexture.swift
macos/scripts/: embed_gstreamer_framework.sh  ensure_gstreamer_macos.sh  gstreamer_paths.sh  link_vendored_gstreamer.sh  prune_gstreamer_orphan_dylibs.sh  prune_gstreamer_plugins.sh  seed_gstreamer_registry.sh  strip_gstreamer_runtime.sh  thin_gstreamer_framework.sh
macos/xue_hua_video_player/: Package.swift
native/: CMakeLists.txt
native/include/: xhvp_player.h
native/scripts/: build_host.sh  build_pod.sh
native/src/: frame.c  pipeline.c  runtime.c  thumbnail.c  windows_env.c  xhvp_ffi_keep.c  xhvp_internal.h  xhvp_player.c
rust/: .gitignore  Cargo.toml  build.rs  cargokit.yaml.disabled
rust/.cargo/: config.toml
rust/macos_shim/: XueHuaMainThreadShim.m
rust/src/: android_gst.rs  android_gst_runtime.rs  asset_appsrc.rs  asset_resolver.rs  asset_resolver_android.rs  diag.rs  frb_generated.rs  gst_bus.rs  gst_player.rs  gst_runtime.rs  lib.rs  pipeline_builder.rs  pipeline_state.rs  platform_overlay.rs  platform_view_android.rs  platform_view_ios.rs  platform_view_jni.rs  player.rs  player_events.rs  video_texture.rs
rust/src/api/: frb_handler.rs  mod.rs  player.rs  simple.rs  types.rs
rust/src/gst/: android.rs  android_bootstrap.rs  android_runtime.rs  env.rs  init.rs  ios_plugins.rs  mod.rs  runtime.rs  runtime_glib.rs  tls.rs  tls_macos.rs
rust/src/gst_init/: env.rs  ios_plugins.rs  mod.rs  tls.rs
rust/src/media/: asset_android.rs  mod.rs  resolver.rs
rust/src/platform/: android.rs  jni.rs  macos.rs  mod.rs  texture.rs
rust/src/platform/ios/: layer.rs  mod.rs
rust/src/playback/: asset_pipeline.rs  bus.rs  capabilities.rs  engine.rs  frame.rs  gst_context.rs  ios_overlay.rs  mod.rs  play_resume.rs  replay.rs  shell.rs  sink.rs  state.rs  surface.rs  switch.rs  tracks.rs  uri_pipeline.rs
rust/src/playback/bus/: effects.rs  mod.rs  parse.rs  reducer.rs
rust/src/playback/gst/: metadata.rs  mod.rs  orientation.rs  sink.rs
rust/src/playback/overlay/: android.rs  android_session.rs  desktop.rs  desktop_session.rs  gst_scheduler.rs  ios.rs  ios_session.rs  load_preroll.rs  macos.rs  macos_session.rs  mod.rs  overlay_session.rs  preroll_executor.rs  preroll_gate.rs  sink_slot.rs  tests.rs  video_overlay.rs
rust/src/playback/overlay/platform/: mod.rs
rust/src/playback/overlay/platform/android/: mod.rs  ops.rs  session.rs
rust/src/playback/overlay/platform/ios/: bus_backend.rs  mod.rs  session.rs
rust/src/playback/overlay/platform/window/: backend.rs  mod.rs  session.rs
rust/src/playback/overlay/preroll/: executor.rs  gate.rs  mod.rs
rust/src/video/: info.rs  ios_layer.rs  mod.rs  orientation.rs  overlay.rs
scripts/: symbolicate_android_tombstone.sh
test/: xue_hua_player_controller_test.dart  xue_hua_video_player_initialize_test.dart
test/controls/: immersive_controls_state_test.dart  immersive_controls_test.dart  immersive_gesture_layer_test.dart  immersive_hud_test.dart  material_video_controls_narrow_test.dart  scrub_controller_test.dart  (+4 more)
tool/: setup_gstreamer_macos.sh  sync_native_core.sh  verify_native_core.sh
windows/: CMakeLists.txt  xue_hua_video_platform_view.cpp  xue_hua_video_platform_view.h  xue_hua_video_player_plugin.cpp  xue_hua_video_texture.cpp  xue_hua_video_texture.h
windows/include/xue_hua_video_player/: xue_hua_video_player_plugin_c_api.h
(+121 files in other folders)
