[package]
name = "xue_hua_video_player"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"

# Media pipeline
gstreamer = "0.25.3"
gstreamer-app = "0.25.2"
gstreamer-video = "0.25.3"

# Flutter external texture bridge
irondash_texture = "0.5.0"
irondash_engine_context = "0.5.0"
irondash_run_loop = "0.6.0"

anyhow = "1.0.103"
log = "0.4.20"
once_cell = "1.21.4"
parking_lot = "0.12.5"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.4"

[profile.release]
debug = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# Vendored copy of irondash_texture with a macOS/iOS fix: the upstream 0.5.0
# creates the backing IOSurface with `bytesPerRow = width * 4`, which fails
# Metal's row-alignment requirement on the current Flutter macOS/iOS renderer
# ("Could not create Metal texture from pixel buffer: CVReturn -6684"). The
# vendored copy aligns the stride to 256 bytes and uploads row-by-row.
[patch.crates-io]
irondash_texture = { path = "vendor/irondash_texture" }
irondash_engine_context = { path = "vendor/irondash_engine_context" }
