[package]
name = "xue_hua_video_player"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"

# Media pipeline
gstreamer = { version = "0.25.3", features = ["v1_18"] }
gstreamer-app = "0.25.2"
gstreamer-video = "0.25.3"

anyhow = "1.0.103"
log = "0.4.20"
once_cell = "1.21.4"
parking_lot = "0.12.5"
url = "2.5.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.4"

[profile.release]
debug = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[build-dependencies]
cc = "1.2.0"
